--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/common": "^5.1.0",
     "@nestjs/core": "^5.1.0",
     "fastify-formbody": "^2.0.0",
+    "lodash": "^4.17.10",
+    "@types/lodash": "^4.14.112",
     "reflect-metadata": "^0.1.12",
     "speaker": "^0.4.1",
     "rxjs": "^6.0.0",
