Inject Configuration Service
Inject configuration service into disk factory to provide a configuration object upon request

--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     ],
     "collectCoverageFrom": [
       "src/**/*.{ts}",
-      "!src/config.ts",
+      "!src/config/config.ts",
       "!src/main(.hmr)?.ts"
     ],
     "testMatch": [
